@@ -100,6 +100,9 @@ ToDo/Notes:
 	- Add fs/ntfs/attrib.[hc]::ntfs_attr_make_non_resident().
 	- Fix sign of various error return values to be negative in
 	  fs/ntfs/lcnalloc.c.
+	- Modify ->readpage and ->writepage (fs/ntfs/aops.c) so they detect and
+	  handle the case where an attribute is converted from resident to
+	  non-resident by a concurrent file write.
 
 2.1.22 - Many bug and race fixes and error handling improvements.
 
